<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">News Moment</string>
    <string name="news_test">範例新聞</string>
    <string name="to_diary">回顧問卷</string>
    <string name="to_test">test</string>
    <string name="to_noti_news">發送新聞提醒</string>
    <string name="to_noti_esm">發送問卷提醒</string>

    <string name="_30_seconds">30 seconds</string>
    <string name="_10_seconds">10 seconds</string>
    <string name="_5_seconds">5 seconds</string>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_enable_notifications">Enable notifications</string>
    <string name="pref_title_notification_time">Notification time</string>
    <string name="settings_button_text">Settings</string>

    <!-- Strings related to notification channels -->
    <string name="channel_name">All Notifications</string>
    <string name="channel_description">All notifications</string>
    <string name="title_activity_settings">Settings</string>
    <string name="btn_to_noti_list">通知紀錄</string>
    <string name="setting">setting</string>
    <string name="esm">esm</string>

    <!-- navigation bar -->
    <string name="my_files">My Files</string>
    <string name="shared">Shared</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="user_id">user_id</string>
    <string name="user_phone_Id">user_phone_Id</string>


    <!-- setting -->
    <!-- Settings Activity Title -->

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- music  -->
<!--    <string name="app_name">Services_In_Android</string>-->
    <string name="heading">Services In Android</string>
    <string name="startButtonText">Start the Service</string>
    <string name="stopButtonText">Stop the Service</string>

    <!-- activity recog-->
    <string name="action_settings">Settings</string>

    <string name="title_activity_permission_rational">PermissionRationalActivity</string>
    <string name="main_message_activity_permission_rational">Track activity changes by letting us read your phone\'s activity transitions.</string>
    <string name="details_message_activity_permission_rational">This app\'s experience requires access to your phone\'s activity transitions to display changes from walking to standing still.</string>
    <string name="no_thanks_activity_permission_rational">No Thanks</string>
    <string name="continue_activity_permission_rational">Continue</string>
    <string name="enable_disable_button_activity_recognition">Enable/Disable Activity Recognition</string>
    <string name="user_name">user_name</string>

    <!-- nested viewpager-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- alarm-->
    <string name="sett_reminder_header">允許發問卷時間區間</string>
    <string name="sett_reminder_label">Remind Me</string>
    <string name="sett_reminder_desc">請至少設定12小時，並以整點為單位\ne.g. 開始:下午12點 結束:上午12點(凌晨)</string>
    <string name="sett_reminder_time_label">問卷開始時間</string>
    <string name="sett_reminder_time_label_ee">問卷結束時間</string>
    <string name="sett_reminder_time_content">8 : 00 AM</string>

    <string name="chart_label_Others">Other Countries</string>
    <string name="chart_label_KR">South Korea</string>
    <string name="chart_label_JP">Japan</string>
    <string name="chart_label_US">United States</string>

    <string name="chart_label_newsmoment">NewsMoment screen time</string>

    <string name="chart_label_chinatimes">旺旺中時</string>
    <string name="chart_label_ltn">自由時報</string>
    <string name="chart_label_setn">三立新聞網</string>
    <string name="chart_label_udn">聯合</string>
    <string name="chart_label_storm">風傳媒</string>
    <string name="chart_label_cna">中央社</string>
    <string name="chart_label_ebc">東森</string>
    <string name="chart_label_ettoday">Ettoday</string>
    <string name="chart_label_cts">華視新聞</string>

    <string name="upload">上傳本地資料</string>

    <string name="accessibility_service_description">My Description</string>
    <string name="category_text">Category Text</string>
    <string name="_2022_03_2418_06_02">2022/03/2418:06:02</string>
    <string name="media_name">Media Name</string>

    <!--     setting -->
    <string name="battery_optimization">battery_optimization</string>
    <string name="storage_access">storage_access</string>
    <string name="physical_activity">physical_activity</string>
    <string name="notification_permission">notification permission</string>
    <string name="notification_policy_access">notification_policy_access</string>
    <string name="access_granted">權限已經開啟</string>
    <!--    login -->
    <string name="login_success">登入成功</string>
    <string name="login_failed">登入失敗，需要幫忙請來信詢問</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="account_is_empty">帳號還沒打阿</string>
    <string name="password_is_empty">密碼還沒打阿</string>
    <string name="account_wrong_format">帳號格式好像錯了阿</string>


    <string name="hint_refresh">可能要手動刷新或重啟app才會生效</string>

    <string name="persist_notification_title">NewMoment Service</string>
    <string name="persist_notification_text">Running in the background</string>
    <string name="dummy_notification_title">Congratulations! 🎉🎉🎉</string>
    <string name="dummy_notification_text">You have post a notification to Android 13!!!</string>

    <string name="activity_recognition_permission_rational_dialog_title">Activity Recognition Permission Needed</string>
    <string name="notification_permission_rational_dialog_title">Notification Permission Needed</string>
    <string name="permission_rational_dialog_message">To make everything properly work, you need to give permission to New Moment.</string>
    <string name="permission_rational_dialog_positive_button_text">Request a permission</string>
    <string name="permission_rational_dialog_negative_button_text">No thanks</string>

    <string name="activity_recognition_settings_dialog_title">Activity Recognition Permission Needed</string>
    <string name="settings_dialog_message">Give permission manually inside the app\'s settings</string>

    <string name="notification_settings_dialog_title">Notification Permission Needed</string>

    <string name="settings_dialog_positive_button_text">Go to settings</string>
    <string name="settings_dialog_negative_button_text">No thanks</string>

    <string name="transition_update_request_success">Transition updates requested</string>
    <string name="transition_update_request_failed">Requesting transition updates failed</string>
    <string name="transition_update_remove_success">Transition updates removed</string>
    <string name="transition_update_remove_failed">Removing transition updates failed</string>

    <string name="activity_update_request_success">Activity updates requested</string>
    <string name="activity_update_request_failed">Requesting activity updates failed</string>
    <string name="activity_update_remove_success">Activity updates removed</string>
    <string name="activity_update_remove_failed">Removing activity updates failed</string>

    <string name="start_tracking">Start</string>
    <string name="stop_tracking">Stop</string>
    <string name="reset_tracking">Reset</string>
    <string name="time_to_start">It\'s time to start activity</string>

    <string name="still">Still</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>

    <string name="still_text">You are currently standing still!</string>
    <string name="walking_text">You are walking!</string>
    <string name="running_text">You are running, keep doing it!</string>
</resources>